feat: add store name

--- a/views/whatsappLogin.ejs
+++ b/views/whatsappLogin.ejs
@@ -175,7 +175,7 @@
   <body>
     <div class="container">
       <div id="barcodeContent">
-        <h4 class="title mb-5">Login to <%= company %></h4>
+        <h4 class="title mb-5">Login to <%= shopName %></h4>
         <img src="<%= barcodeData.qrCode %>" alt="barcode" width="225px" />
         <p class="text-gray subtitle mt-10">
           Scan this QR from your phone camera
